--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Upgrade Season App!</h1>
-<p>This is where we share, learn, and grow together!</p>
+<div class="center jumbotron">
+  <h1>Welcome to the Upgrade Season App!</h1>
+
+  <h2>
+    Home page for 
+    <a href="https://www.upgradeseason.com/">Upgrade Season</a>
+    <p>This is where we share, learn, and grow together!</p>
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("upgrade_season_logo.png", alt: "Upgrade Season logo", width: "200"),
+                      "https://www.upgradeseason.com/" %>
