Add mountain image to homepage

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,5 +10,7 @@
   <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("upgrade_season_logo.png", alt: "Upgrade Season logo", width: "200"),
-                      "https://www.upgradeseason.com/" %>
+<%= link_to image_tag('upgrade_season_logo.png', alt: 'Upgrade Season logo', width: '200'),
+                      'https://www.upgradeseason.com/'%>
+<%= link_to image_tag('mountain_hot_springs.png', alt: 'Mountain Hot Springs', width: '600'),
+                      'https://www.upgradeseason.com/'%>
