Add CSS styling to homepage

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,8 +4,9 @@
   <h2>
     Home page for 
     <a href="https://www.upgradeseason.com/">Upgrade Season</a>
-    <p>This is where we share, learn, and grow together!</p>
   </h2>
+
+  <h3>This is where we share, learn, and grow together!</h3>
 
   <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
 </div>
