Finish layout and routes

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -73,7 +73,7 @@ p {
   padding-top: 9px;
   font-weight: bold;
   &:hover {
-    color: lightblue;
+    color: white;
     text-decoration: none;
   }
 }
