--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
 
   <h3>This is where we share, learn, and grow together!</h3>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-success" %>
 </div>
 
 <%= link_to image_tag('upgrade_season_logo.png', alt: 'Upgrade Season logo', width: '200'),
