--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,27 @@
 <% provide(:title, 'Sign Up') %>
 <h1>Sign Up</h1>
-<p>Welcome new users! Join us by signing up here.</p>
+<%# <p>Welcome new users! Join us by signing up here.</p> %>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%# Call to form_with. The #do indicates a block (and with 1 variable, f for form) %>
+    <%= form_with(model: @user, local: true) do |f| %>
+      <%= render 'shared/error_messages' %>
+      <%# ^^^ Renders a partial with a dedicated shared partial directory for views across multiple controllers. %>
+
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
+
+      <%= f.label :email %>
+      <%= f.email_field :email, class: 'form-control' %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
