--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<%= form_authenticity_token %>
 <% provide(:title, 'Sign Up') %>
 <h1>Sign Up</h1>
 <%# <p>Welcome new users! Join us by signing up here.</p> %>
