--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,11 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <% #Just before the main content %>
+      <% #Iterate through, k, and v is message itself %>
       <% flash.each do |message_type, message| %>
-        <%#<div class="alert alert-<%= message_type %><%#"><%= message %><%#</div>%>
-        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% #<%= content_tag(:div, message, class: "alert alert-#{message_type}")%>
       <% end %>
 
       <%= yield %>
