--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -5,6 +5,7 @@
     </div>
     <ul>
     <% @user.errors.full_messages.each do |msg| %>
+    <%# ^^^ error messgages rely on @user.errors.full_messages(but only applies to ActiveRecord object %>
       <li><%= msg %></li>
     <% end %>
     </ul>
