--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,9 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%# Call to form_with, with f as variable.) %>
-    <%= form_with(model: @user, local: true) do |f| %><%#The ACTION of the form is POST to URL /users.%>
+    <%= form_with(model: @user, local: true) do |f| %> 
+    <%# The ACTION of the form is (knows to) POST to URL /users(users path)%>
+      <%# @user is an ActiveRecord object, @user is an argument form_with takes.
       <%= render 'shared/error_messages' %>
       <%# ^^^ Renders a partial with a dedicated shared partial directory for views across multiple controllers. %>
 
