Add login_path to Log in header link

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
                 <%# indicating that it should also submit an HTTP DELETE request. %>
 
         <% else %>
-        <li><%= link_to "Log in", "#" %></li>
+        <li><%= link_to "Log in", login_path %></li>
         <%# We actually have a ^login_path, so we dont need a "#" stub. %>
 
         <% end %>
