--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,8 @@
             <ul class="dropdown-menu"> <%# Bootstraps ability to make dropdowns %>
               <li><%= link_to "Profile", current_user %></li> 
               <%# Rails autoconverts this to user path %>
-              <li><%= link_to "Settings", '#' %></li>
+              <%# current_user is a helper method %>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path, method: :delete %>
