Add friendly forwarding functionality

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,10 @@
 <% provide(:title, "About") %>
 <h1>Upgrade Season App!</h1>
-<p>This is a resource to share our journey of living the best life possible.</p>
+
+<p>This is a resource to share our journey of living the best life possible. Upgrade Season about acknowledging that we love ourselves, AND STILL want to be upgrading some aspect of our personal
+or professional lives, such as our skills of our hobbies, or how well our business is being completed, or a personal
+project.</p>
+
+<p>We can focus on how successful we are at reaching goals, or you can “simply” upgrade your understanding of yourself as a human being, we could also focus on how we have the ability to experiment and learn from the actions we completed in however we spent our time, from an experiment and feedback loop perspective, we can then DO BETTER because we should know how and what to do to make our lives better.</p>
+
+<p>Basically any and every aspect of your life can probably be upgraded, but remember to regularly have the thought that you LOVE YOURSELF. The idea is that by forming this community, sharing and building some aspect of our lives, we can make a better life for ourself and those special people around us, and then we can have an even more meaningful life. It’s Upgrade Season!</p>
