--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -3,7 +3,7 @@
 <p>Hi <%= @user.name %>,</p>
 
 <p>
- Welcome to Upgrade Season! Click on the link below to activate your account:
+ Welcome to Upgrade Season! Click the link below to activate your account:
 </p>
 
 <%= link_to "Activate", edit_account_activation_url(@user.activation_token,
