--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -7,7 +7,7 @@
                   local: true) do |f| %>
 
       <%# Shared error messages partial designed for users ^the @user object^ %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages', object: f.object %>
 
       <%# PW update form needs access to the user's email address. %>
       <%= hidden_field_tag :email, @user.email %>
