--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,8 @@ Let's write the code to display microposts %>
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="col-md-4">
-    <section class="user_info">
+    <%# <section class="user_info">%>
+    <section>
       <!--<h1>-->
       <%#Commented out h1 tags^ %>
         <h1>
