--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,6 +1,6 @@
 <%# When we submit this form, it goes to destroy action of relationship controller, this gives us ID of relationship %>
 <%# We then find the ID in the DB and destroy %>
 <%= form_with(model: current_user.active_relationships.find_by(followed_id: @user.id),
-              html: { method: :delete }, local: true) do |f| %>
+              html: { method: :delete }, remote: true) do |f| %>
   <%= f.submit "Unfollow", class: "btn" %>
 <% end %>
