--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
     <ul>
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="https://news.upgradeseason.com/">News</a></li>
+      <%#<li><a href="https://news.upgradeseason.com/">News</a></li>%>
     </ul>
   </nav>
 </footer>
