Update about page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,19 @@
 <% provide(:title, "About") %>
 <h1>Upgrade Season App!</h1>
 
-<p>This is a resource to share our journey of living the best life possible. Upgrade Season about acknowledging that we love ourselves, AND STILL want to be upgrading some aspect of our personal
-or professional lives, such as our skills of our hobbies, how well we complete personal projects, or how well our business is being completed.</p>
+<p>Upgrade Season is about upgrading some aspect of our lives, all the while acknowledging that we love ourselves just the way we are. Perhaps we could do better in our personal or professional lives. This could be a hobby, an aspect of our business, or a personal project.</p>
 
-<p>We can focus on how successful we are at reaching goals, or you can “simply” upgrade your understanding of yourself as a human being, we could also focus on how we have the ability to experiment and learn from the actions we completed in however we spent our time, from an experiment and feedback loop perspective, we can then DO BETTER because we should know how and what to do to make our lives better.</p>
+<p>A Power question you can ask yourself is: How well is that working out for you?</p>
 
-<p>Basically, some aspect of your life can probably be upgraded, but remember to regularly have the thought that you LOVE YOURSELF. The idea is that by forming this community, sharing and building some aspect of our lives, we can make a better life for ourself and those special people around us, and then we can have an even more meaningful life. It’s Upgrade Season!</p>
+<p>Getting knowledge and applying it is the key. Getting feedback from our experience is basically applying the
+scientific method in our own life. We experiment and get feedback, this is a loop, and we can learn from this
+experience, and do better the next time, with the ultimate goal of having a better life, even if it is something as
+simple as enjoying your relaxation time more.</p>
+
+<p>
+We can learn and grow. Direct experience is key as is learning from the wisdom of others. We can make a better life for ourselves and those special people we keep around us.
+</p>
+
+<p>
+It’s Upgrade Season!
+</p>
