Clean up comments

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 Let's write the code to display microposts %>
 
 <%#<% provide(:title, @user.name); raise %>
-<%#raise added so we know if anything goes horribly wrong on this page we're covered%>
+<%#^ raise can be added so we know if anything goes horribly wrong on this page we're covered%>
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="col-md-4">
