--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,4 @@
 <% provide(:title, "Contact") %>
 <h1>Upgrade Season App!</h1>
-<p>Contact us anytime!</p>
+<p>We are here to help!</p>
+<p>Contact us anytime by sending an email to <a href="mailto:support@upgradeseason.com">support@upgradeseason.com</a></p>
