Edit about page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,19 +1,74 @@
 <% provide(:title, "About") %>
 <h1>Upgrade Season App!</h1>
 
-<p>Upgrade Season is about upgrading some aspect of our lives, all the while acknowledging that we love ourselves just the way we are. Perhaps we could do better in our personal or professional lives. This could be a hobby, an aspect of our business, or a personal project.</p>
+<p>Upgrade Season is about upgrading some aspect of our lives, while acknowledging that we love ourselves just the way we are. Perhaps we could do better in our personal or professional lives. This could be a hobby, an aspect of our business, or a personal project.</p>
 
-<p>A Power question you can ask yourself is: How well is that working out for you?</p>
+<p>A Power question to ask yourself is</p>
 
-<p>Getting knowledge and applying it is the key. Getting feedback from our experience is basically applying the
-scientific method in our own life. We experiment and get feedback, this is a loop, and we can learn from this
-experience, and do better the next time, with the ultimate goal of having a better life, even if it is something as
-simple as enjoying your relaxation time more.</p>
+<p><b>How well is that working out for you?</b></p>
+
+<p>This requires some self awareness and self reflection. Let us remember that getting knowledge and applying it is the key, with the ultimate goal of having a better life, even if it is something as simple as enjoying your relaxation time more.</p>
 
 <p>
-We can learn and grow. Direct experience is key as is learning from the wisdom of others. We can make a better life for ourselves and those special people we keep around us.
+As a starting point, here are 9 parts of life, so you could pick any one or more of these, and rate yourself on a 1 through 10 scale. Then create a plan to improve that aspect, and then act according to the plan you created.
+</p>
+
+<p><b>
+Health and physical well being
+</b></p>
+
+
+<p><b>
+Relationships
+</b></p>
+
+
+<p><b>
+Work
+</b></p>
+
+
+<p><b>
+Money
+</b></p>
+
+
+<p><b>
+Learning and Growth
+</b></p>
+
+
+<p><b>
+Spiritual fulfillment
+</b></p>
+
+
+<p><b>
+Love
+</b></p>
+
+
+<p><b>
+Fun and enjoyment
+</b></p>
+
+
+<p><b>
+Helping others
+</b></p>
+
+<p>
+We invite you to make a short post (we limit our user’s posts to 140 characters) to document and share the progress of your process!
 </p>
 
 <p>
-It’s Upgrade Season!
+Sign up and join our community, it's free!
+</p>
+
+<p>
+We can make a better life for ourselves and the special people we keep around us.
+</p>
+
+<p>
+Uplift!  It’s Upgrade Season!
 </p>
