--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,74 +1,41 @@
 <% provide(:title, "About") %>
-<h1>Upgrade Season App!</h1>
+<h1>It's Upgrade Season!</h1>
 
-<p>Upgrade Season is about upgrading some aspect of our lives, while acknowledging that we love ourselves just the way we are. Perhaps we could do better in our personal or professional lives. This could be a hobby, an aspect of our business, or a personal project.</p>
+<p><b>Upgrade Season</b> is about upgrading our life while acknowledging that we <b>love</b> ourselves just the way we are. Perhaps we could do better in our personal or professional lives. This could be a hobby, an aspect of our business, or a personal project.</p>
 
-<p>A Power question to ask yourself is</p>
+<p>A Power question to ask yourself, when considering what you do with your time</p>
 
 <p><b>How well is that working out for you?</b></p>
 
-<p>This requires some self awareness and self reflection. Let us remember that getting knowledge and applying it is the key, with the ultimate goal of having a better life, even if it is something as simple as enjoying your relaxation time more.</p>
+<p>Getting the knowledge and applying it is the key to success, with the ultimate goal of having a better life, even if
+it is something as simple as enjoying your relaxation time a bit more.</p>
 
 <p>
 As a starting point, here are 9 parts of life, so you could pick any one or more of these, and rate yourself on a 1 through 10 scale. Then create a plan to improve that aspect, and then act according to the plan you created.
 </p>
-
-<p><b>
-Health and physical well being
-</b></p>
-
-
-<p><b>
-Relationships
-</b></p>
-
-
-<p><b>
-Work
-</b></p>
-
-
-<p><b>
-Money
-</b></p>
-
-
-<p><b>
-Learning and Growth
-</b></p>
-
-
-<p><b>
-Spiritual fulfillment
-</b></p>
-
-
-<p><b>
-Love
-</b></p>
-
-
-<p><b>
-Fun and enjoyment
-</b></p>
-
-
-<p><b>
-Helping others
-</b></p>
-
+<ul><h3>
+  <li>Health and physical well being</li>
+  <li>Relationships</li>
+  <li>Work</li>
+  <li>Money</li>
+  <li>Learning and Growth</li>
+  <li>Spiritual fulfillment</li>
+  <li>Fun and enjoyment</li>
+  <li>Helping others</li>
+  <li>Love</li>
+</h3>
 <p>
-We invite you to make a short post (we limit our user’s posts to 140 characters) to document and share the progress of your process!
+We invite you to make a short post (we limit our user’s posts to 160 characters) to document and share the progress of your process! After you sign up click the <a href="https://www.upgradeseason.com/users">Users</a> link at the top of the screen to see the other users you can follow.
 </p>
 
 <p>
-Sign up and join our community, it's free!
+ <a href="https://www.upgradeseason.com/signup">Sign up</a> and join our community, it's <b>free</b>!
 </p>
 
 <p>
 We can make a better life for ourselves and the special people we keep around us.
 </p>
 
-<p>
-Uplift!  It’s Upgrade Season!
-</p>
+<p><h3>
+It’s Upgrade Season!
+</h3></p>
