--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,12 +1,12 @@
 <% provide(:title, "Help") %>
 <h1>Upgrade Season App!</h1>
 
-<p>We are here to help!</p>
+<p><b>We are here to help!</b></p>
 
 <p>To use the Upgrade Season app, begin by <%= link_to "signing up", signup_path %>, it’s free!</p>
 
-<p>Then you can make posts, follow other users, and read your feed.</p>
+<p>Then you can make posts, follow other users, and read your feed. Your feed shows the posts of the other users that you follow.</p>
 
-<p>It’s that <b>simple.</b></p>
+<p>It’s simple, fun, and free to use.</b></p>
 
 <p>If you have any questions, you can contact us anytime by sending an email to <a href="mailto:support@upgradeseason.com">support@upgradeseason.com</a></p>
