--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -26,12 +26,12 @@
       %li Helping others
       %li Love
 %p
-  We invite you to make a short post (we limit our user’s posts to 160 characters) to document and share the progress of your process! After you sign up click the
+  We invite you to make a short post (we limit the length of each post to 160 characters) to document and share whatever you would like! After signing up click the
   %a{:href => "https://www.upgradeseason.com/users"} Users
-  link at the top of the screen to see the other users you can follow.
+  link at the top of the screen to see all other users you can then follow.
 %p
   %a{:href => "https://www.upgradeseason.com/signup"} Sign up
-  and join our community, it's
+  to join our community, it's
   = succeed "!" do
     %b free
 %p
