Update about section

--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -1,5 +1,15 @@
 - provide(:title, "About")
 %h1 It's Upgrade Season!
+
+%p
+  See how the
+  %b Upgrade Season
+  app works by viewing these two user profiles
+%p
+  %a{:href => "https://www.upgradeseason.com/users/1"} Bruce Lee
+%p
+  %a{:href => "https://www.upgradeseason.com/users/2"} Jocko Wilink
+%p After signing up with an email address, users can make short posts, share images and gifs, and your feed shows the posts of all users that you follow.
 %p
   %b Upgrade Season
   is about upgrading our life while acknowledging that we
@@ -28,7 +38,7 @@
 %p
   We invite you to make a short post (we limit the length of each post to 160 characters) to document and share whatever you would like! After signing up click the
   %a{:href => "https://www.upgradeseason.com/users"} Users
-  link at the top of the screen to see all other users you can then follow.
+  link at the top of the screen to see all users at Upgrade Season, which you can then follow.
 %p
   %a{:href => "https://www.upgradeseason.com/signup"} Sign up
   to join our community, it's
