Update about section

--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -8,7 +8,7 @@
 %p
   %a{:href => "https://www.upgradeseason.com/users/1"} Bruce Lee
 %p
-  %a{:href => "https://www.upgradeseason.com/users/2"} Jocko Wilink
+  %a{:href => "https://www.upgradeseason.com/users/2"} Jocko Willink
 %p After signing up with an email address, users can make short posts, share images and gifs, and your feed shows the posts of all users that you follow.
 %p
   %b Upgrade Season
