Update about section

--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -2,9 +2,9 @@
 %h1 It's Upgrade Season!
 
 %p
-  See how the
+  You can see how the
   %b Upgrade Season
-  app works by viewing these two user profiles
+  app works by viewing these user profiles.
 %p
   %a{:href => "https://www.upgradeseason.com/users/1"} Bruce Lee
 %p
